run-online: garde-fou serveurs déjà en cours + MEMORY procédure de lancement
- run-online.sh : préflight qui détecte un serveur DÉJÀ en cours (PID LoginServer/
  content_server ou ports 8080/8081 occupés), arrête les anciens avant de relancer
  (DH_KILL_OLD=0 pour seulement alerter et abandonner), et refuse si un port reste
  occupé. Évite les serveurs zombies (client qui parle à une instance, log lu sur
  une autre). DH_FRAMES vide -> client non plafonné (traverser tout le tuto).
- MEMORY.md : nouvelle section « Lancement (procédure canonique) » — run-online.sh
  comme voie normale, variables (DH_FRAMES/DH_AUTOTAP/DH_AUTOFIGHT), serveur seul,
  et pièges (ne pas tronquer un log ouvert -> grep -a ; exit 144 = kill externe).

Objet du coffre SILVER du tuto confirmé par exécution du roll du jeu :
BADGE_OF_FRIENDSHIP x1 (item, pas un héros) — rig ROOT_1X_RIG_1 non-CJK.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01X8YZTb9Pz94YMCoQpe5N13